fixed portfolio items not appearing on Safari 5
Hopefully this won’t break anything … display: inline for portfolio
items was working fine and has some advantages at the time - reverting
to inline-block makes it work in Safari 5 but might bring back some
other problems

--- a/wp-content/themes/vslv/assets/less/app.less
+++ b/wp-content/themes/vslv/assets/less/app.less
@@ -807,7 +807,7 @@ main {
         // hide by default
         opacity: 0;
 
-        display: inline;
+        display: inline-block;
         list-style: none;
 
         height: 100%;
